--- a/sitio/templates/login.html
+++ b/sitio/templates/login.html
@@ -14,26 +14,38 @@
 					<img src="{% static 'img/gitana-logo.jpg' %}" alt="IMG">
 				</div>
 
-				<form class="login100-form validate-form">
+				<form class="login100-form validate-form" method="post" action="{% url 'sitio:entrar' %}">
+                    {% csrf_token %}
 					<span class="login100-form-title">
 						Entrar al Sistema
 					</span>
-
+                    {% if form.non_field_errors %}
+                        <div class="alert alert-danger">
+                            <p>{{ form.non_field_errors }}</p>
+                        </div>
+                     {% endif %}
 					<div class="wrap-input100 validate-input" data-validate = "Valid email is required: ex@abc.xyz">
-						<input class="input100" type="text" name="email" placeholder="Email">
+                        <input class="input100" type="text" name="username" placeholder="Usuario" value="{{ form.username.value | default:'' }}"/>
 						<span class="focus-input100"></span>
 						<span class="symbol-input100">
 							<i class="fa fa-envelope" aria-hidden="true"></i>
 						</span>
-					</div>
 
+					</div>
+                    {% if form.errors.username %}
+                        <p>{{ form.errors.username}}</p>
+                    {% endif %}
 					<div class="wrap-input100 validate-input" data-validate = "Password is required">
-						<input class="input100" type="password" name="pass" placeholder="Password">
+						<input class="input100" type="password" name="password" placeholder="Password" value="{{ form.password.value | default:'' }}">
 						<span class="focus-input100"></span>
 						<span class="symbol-input100">
 							<i class="fa fa-lock" aria-hidden="true"></i>
 						</span>
+
 					</div>
+                    {% if form.errors.password %}
+                        <p>{{ form.errors.password}}</p>
+                    {% endif %}
 
 					<div class="container-login100-form-btn">
 						<button class="login100-form-btn">
